--- a/Jaljeevika/authenticate/templates/authenticate/registration.html
+++ b/Jaljeevika/authenticate/templates/authenticate/registration.html
@@ -14,17 +14,17 @@
     <title>Jaljeevika</title>
 
     <!-- Icons font CSS-->
-    <link href="{%static 'register/vendor/mdi-font/css/material-design-iconic-font.min.css'%}" rel="stylesheet" media="all">
-    <link href="{%static 'register/vendor/font-awesome-4.7/css/font-awesome.min.css'%}" rel="stylesheet" media="all">
+    <link href="{%static 'registration/vendor/mdi-font/css/material-design-iconic-font.min.css'%}" rel="stylesheet" media="all">
+    <link href="{%static 'registration/vendor/font-awesome-4.7/css/font-awesome.min.css'%}" rel="stylesheet" media="all">
     <!-- Font special for pages-->
     <link href="{%static 'https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i' %}" rel="stylesheet">
 
     <!-- Vendor CSS-->
-    <link href="{%static 'register/vendor/select2/select2.min.css'%}" rel="stylesheet" media="all">
-    <link href="{%static 'register/vendor/datepicker/daterangepicker.css'%}" rel="stylesheet" media="all">
+    <link href="{%static 'registration/vendor/select2/select2.min.css'%}" rel="stylesheet" media="all">
+    <link href="{%static 'registration/vendor/datepicker/daterangepicker.css'%}" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="{%static 'register/css/main.css'%}" rel="stylesheet" media="all">
+    <link href="{%static 'registration/css/main.css'%}" rel="stylesheet" media="all">
 </head>
 
 <body>
@@ -77,13 +77,13 @@
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">Email</label>
-                                    <input class="input--style-4" type="email" name="email">
+                                    <label class="label">Location</label>
+                                    <input class="input--style-4" type="text" name="email">
                                 </div>
                             </div>
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">Phone Number</label>
+                                    <label class="label">Aadhar Number</label>
                                     <input class="input--style-4" type="text" name="phone">
                                 </div>
                             </div>
@@ -110,14 +110,14 @@
     </div>
 
     <!-- Jquery JS-->
-    <script src="{%static 'register/vendor/jquery/jquery.min.js'%}"></script>
+    <script src="{%static 'registration/vendor/jquery/jquery.min.js'%}"></script>
     <!-- Vendor JS-->
-    <script src="{%static 'register/vendor/select2/select2.min.js'%}"></script>
-    <script src="{%static 'register/vendor/datepicker/moment.min.js'%}"></script>
-    <script src="{%static 'register/vendor/datepicker/daterangepicker.js'%}"></script>
+    <script src="{%static 'registration/vendor/select2/select2.min.js'%}"></script>
+    <script src="{%static 'registration/vendor/datepicker/moment.min.js'%}"></script>
+    <script src="{%static 'registration/vendor/datepicker/daterangepicker.js'%}"></script>
 
     <!-- Main JS-->
-    <script src="{%static 'register/js/global.js'%}"></script>
+    <script src="{%static 'registration/js/global.js'%}"></script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
