--- a/index/templates/category-full.html
+++ b/index/templates/category-full.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jeevan</title>
+    <title>JalJeevika</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -97,14 +97,14 @@
                           <li class="nav-item"><a href="{% url 'category-seeds' %}" class="nav-link">Seeds</a></li>
                           <li class="nav-item"><a href="{% url 'category-equipments' %}" class="nav-link">Equipments</a></li>
                           <li class="nav-item"><a href="category.html" class="nav-link">Logistics</a></li>
-                          
+
                         </ul>
                       </div>
                       <div class="col-md-6 col-lg-3">
                         <h5>Sell Stuff</h5>
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="category.html" class="nav-link">Fishes</a></li>
-                         
+
                         </ul>
                       </div>
                       <div class="col-md-6 col-lg-3">
@@ -112,7 +112,7 @@
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="category.html" class="nav-link">On Fishing Practice</a></li>
                           <li class="nav-item"><a href="category.html" class="nav-link"></a></li>
-                          
+
                         </ul>
                       </div>
                       <div class="col-md-6 col-lg-3">
@@ -120,9 +120,9 @@
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="category.html" class="nav-link">Efficient Fishing Calendar</a></li>
                           <li class="nav-item"><a href="category.html" class="nav-link">Discussion Forum</a></li>
-        
+
                         </ul>
-                        
+
                       </div>
                     </div>
                   </li>
@@ -138,7 +138,7 @@
                           <li class="nav-item"><a href="category.html" class="nav-link">Seeds</a></li>
                           <li class="nav-item"><a href="category.html" class="nav-link">Equipments</a></li>
                           <li class="nav-item"><a href="category.html" class="nav-link">Logistics</a></li>
-                          
+
                         </ul>
                       </div>
                       <div class="col-md-6 col-lg-3">
@@ -146,7 +146,7 @@
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="category.html" class="nav-link">Calendar</a></li>
                           <li class="nav-item"><a href="category.html" class="nav-link">Farming Practices</a></li>
-                          
+
                         </ul>
                       </div>
                     </div>
@@ -162,20 +162,20 @@
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="index.html" class="nav-link">Fishes at a lower price</a></li>
                           <li class="nav-item"><a href="category.html" class="nav-link">Best Fishes</a></li>
-                          
+
                         </ul>
                       </div>
                       <div class="col-md-6 col-lg-3">
                         <h5>User</h5>
                         <ul class="list-unstyled mb-3">
-                          
+
                           <li class="nav-item"><a href="customer-orders.html" class="nav-link">Orders history</a></li>
                           <li class="nav-item"><a href="customer-order.html" class="nav-link">Order history detail</a></li>
-                         
+
                         </ul>
                       </div>
-                      
-                     
+
+
                     </div>
                   </li>
                 </ul>
@@ -184,6 +184,7 @@
             <div class="navbar-buttons d-flex justify-content-end">
               <!-- /.nav-collapse-->
           </div>
+        </div>
         </div>
       </nav>
       <div id="search" class="collapse">
