--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -300,7 +300,7 @@
           <div class="container">
             <div class="col-md-12">
               <h3 class="text-uppercase">From our video section</h3>
-              <p class="lead mb-0">What's new in the world of fisheries? <a href="blog.html">Check our collection!</a></p>
+              <p class="lead mb-0">What's new in the world of fisheries? <a href="{% url 'tutorial' %}">Check our collection!</a></p>
             </div>
           </div>
         </div>
