--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -160,7 +160,7 @@
                       <div class="col-md-6 col-lg-3">
                         <h5>Shop</h5>
                         <ul class="list-unstyled mb-3">
-                          <li class="nav-item"><a href="index.html" class="nav-link">Fishes at a lower price</a></li>
+                          <li class="nav-item"><a href="{% url 'fishes'%}" class="nav-link">Fishes at a lower price</a></li>
                           <li class="nav-item"><a href="category.html" class="nav-link">Best Fishes</a></li>
                           
                         </ul>
