--- a/index/templates/category.html
+++ b/index/templates/category.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>JalJeevika</title>
+    <title>Jeevan</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -35,19 +35,15 @@
       _________________________________________________________
       -->
       <div id="top">
-
-          <div class="container">
+        <div class="container">
           <div class="row">
             <div class="col-lg-6 offer mb-3 mb-lg-0"></div>
             <div class="col-lg-6 text-center text-lg-right">
               <ul class="menu list-inline mb-0">
-                <li class="list-inline-item"><a href="#" data-toggle="modal" data-target="#login-modal">Login</a></li>
-                <li class="list-inline-item"><a href="register.html">Register</a></li>
 
               </ul>
             </div>
-
-        </div>
+          </div>
         </div>
         <div id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true" class="modal fade">
           <div class="modal-dialog modal-sm">
@@ -75,8 +71,6 @@
           </div>
         </div>
         <!-- *** TOP BAR END ***-->
-
-
       </div>
       <nav class="navbar navbar-expand-lg">
         <div class="container"><a href="index.html" class="navbar-brand home"><img src="img/logo.png" alt="Obaju logo" class="d-none d-md-inline-block"><img src="img/logo-small.png" alt="Obaju logo" class="d-inline-block d-md-none"><span class="sr-only">Obaju - go to homepage</span></a>
