--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -40,8 +40,6 @@
             <div class="col-lg-6 offer mb-3 mb-lg-0"></div>
             <div class="col-lg-6 text-center text-lg-right">
               <ul class="menu list-inline mb-0">
-                <li class="list-inline-item"><a href="#" data-toggle="modal" data-target="#login-modal">Login</a></li>
-                <li class="list-inline-item"><a href="register.html">Register</a></li>
                 
               </ul>
             </div>
@@ -73,8 +71,6 @@
           </div>
         </div>
         <!-- *** TOP BAR END ***-->
-        
-        
       </div>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -93,16 +89,15 @@
                         <h5>Buy Stuff</h5>
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="{% url 'category-seeds' %}" class="nav-link">Seeds</a></li>
-                          <li class="nav-item"><a href="{% url 'category-equipments' %}" class="nav-link">Equipments</a></li>
-                          <li class="nav-item"><a href="category.html" class="nav-link">Logistics</a></li>
+                          <li class="nav-item">Equipments</li>
+                          <li class="nav-item">Logistics</li>
                           
                         </ul>
                       </div>
                       <div class="col-md-6 col-lg-3">
                         <h5>Sell Stuff</h5>
                         <ul class="list-unstyled mb-3">
-                          <li class="nav-item"><a href="category.html" class="nav-link">Fishes</a></li>
-                         
+                          <li class="nav-item">Fishes</li>
                         </ul>
                       </div>
                       <div class="col-md-6 col-lg-3">
@@ -117,10 +112,8 @@
                         <h5>Additional Help</h5>
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="category.html" class="nav-link">Efficient Fishing Calendar</a></li>
-                          <li class="nav-item"><a href="category.html" class="nav-link">Discussion Forum</a></li>
-        
+                          <li class="nav-item">Discussion Forum</li>
                         </ul>
-                        
                       </div>
                     </div>
                   </li>
@@ -134,8 +127,8 @@
                         <h5>Sell</h5>
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="category.html" class="nav-link">Seeds</a></li>
-                          <li class="nav-item"><a href="category.html" class="nav-link">Equipments</a></li>
-                          <li class="nav-item"><a href="category.html" class="nav-link">Logistics</a></li>
+                          <li class="nav-item">Equipments</li>
+                          <li class="nav-item">Logistics</li>
                           
                         </ul>
                       </div>
@@ -143,7 +136,7 @@
                         <h5>Information</h5>
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="category.html" class="nav-link">Calendar</a></li>
-                          <li class="nav-item"><a href="category.html" class="nav-link">Farming Practices</a></li>
+                          <li class="nav-item">Farming Practices</li>
                           
                         </ul>
                       </div>
@@ -161,17 +154,14 @@
                         <h5>Shop</h5>
                         <ul class="list-unstyled mb-3">
                           <li class="nav-item"><a href="{% url 'fishes'%}" class="nav-link">Fishes at a lower price</a></li>
-                          <li class="nav-item"><a href="category.html" class="nav-link">Best Fishes</a></li>
-                          
+                          <li class="nav-item">Best Fishes</li>
                         </ul>
                       </div>
                       <div class="col-md-6 col-lg-3">
                         <h5>User</h5>
                         <ul class="list-unstyled mb-3">
-                          
-                          <li class="nav-item"><a href="customer-orders.html" class="nav-link">Orders history</a></li>
-                          <li class="nav-item"><a href="customer-order.html" class="nav-link">Order history detail</a></li>
-                         
+                          <li class="nav-item">Orders history</li>
+                          <li class="nav-item">Order history detail</li>
                         </ul>
                       </div>
                       
